@@ -437,6 +437,10 @@ Major new features in this release
 2.9.3:
 ------
 
+All (GUI):
+
+- Support float, double and file name values in wxGenericValidator (troelsk).
+
 GTK:
 
 - Generate events for two auxiliary mouse buttons in wxGTK (Marcin Wojdyr).
